hphp/hack/test/typecheck/modules/module_first3.php
<?hh
<<file:__EnableUnstableFeatures("modules")>>

class Foo {}
module foo;
